// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: PerCapita initial state renders disabled enablePer1000 without crashing 1`] = `
<section
  className="m-btn-group"
>
  <p>
    Map shading
  </p>
  <button
    className="a-btn toggle-button raw selected"
    onClick={[Function]}
  >
    Complaints
  </button>
  <button
    className="a-btn toggle-button capita a-btn__disabled"
    onClick={[Function]}
  >
    Complaints per 1,000 
    <span>
      population
    </span>
  </button>
</section>
`;

exports[`component: PerCapita initial state renders enablePer1000 without crashing 1`] = `
<section
  className="m-btn-group"
>
  <p>
    Map shading
  </p>
  <button
    className="a-btn toggle-button raw selected"
    onClick={[Function]}
  >
    Complaints
  </button>
  <button
    className="a-btn toggle-button capita deselected"
    onClick={[Function]}
  >
    Complaints per 1,000 
    <span>
      population
    </span>
  </button>
</section>
`;
